@@ -60,6 +60,15 @@ Notes</i>).
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">spawn</td>
+    <td valign="top">whether or not you want the command to be spawned<br/>
+    Default is false.<br>
+    If you spawn a command, its output will not be logged by ant.<br/>
+    The input, output, error, and result property settings are not active when spawning a process.
+    </td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">output</td>
     <td valign="top">Name of a file to which to write the output. If the error stream 
       is not also redirected to a file or property, it will appear in this output.</td>
